# human

./: CHANGELOG.md  Cargo.toml  README.md  web.html
.github/ISSUE_TEMPLATE/: bug_report.md
examples/web/: Cargo.toml  README.md
examples/web/site/: index.html
examples/web/src/: lib.rs  main.rs
src/: btn.rs  gamepad.rs  input.rs  input_mode.rs  key.rs  lib.rs  mode.rs  web.rs
